Fix heading spacing

--- a/style.css
+++ b/style.css
@@ -15,5 +15,5 @@ main {
 
 h1 {
   font-size: 2.5rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 1rem;
 }
